--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
   "author": "Robert Lee <pboymt@foxmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node lib"
+    "start": "node lib",
+    "get:pcrdata": "py ./scripts/pcrdata.py"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "jsdom": "^16.3.0",
     "moment": "^2.27.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.0",
+    "turndown": "^6.0.0",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
-    "@types/node": "^14.0.27"
+    "@types/jsdom": "^16.2.3",
+    "@types/node": "^14.0.27",
+    "@types/turndown": "^5.0.0"
   }
 }
